--- a/06-SSM-02-FP/pom.xml
+++ b/06-SSM-02-FP/pom.xml
@@ -91,6 +91,12 @@
             <version>2.17.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+
         <!--切面织入器-->
         <dependency>
             <groupId>org.aspectj</groupId>
